Adjusted CSS from issues sample to prevent overlap with other samples (#263)

--- a/src/frontend-samples/issues-sample/Issues.scss
+++ b/src/frontend-samples/issues-sample/Issues.scss
@@ -114,7 +114,7 @@
 }
 
 /** Override the spinner on initial widget load to be in the center of the widget */
-.core-spinner-medium {
+.issues-widget .core-spinner-medium {
   position: unset;
 }
 
